# metaphase_core

./: CMakeLists.txt  LICENSE  README.md
helper_apps/file_viewer/: CMakeLists.txt
helper_apps/file_viewer/inc/file_viewer/: FileViewerApplication.h  FileViewerComponent.h  LAF.h  MainComponent.h  MainWindow.h  MultiFileViewerComponent.h  SpectrogramComponent.h  TabCloseButton.h  command_ids.h  constants.h  forward_declarations.h
helper_apps/file_viewer/inc/file_viewer/spectrogram/: SpectrogramComponent.h  SpectrogramSettings.h  SpectrogramSettingsComponent.h  SpectrogramSettingsWindow.h
helper_apps/file_viewer/src/: FileViewerApplication.cpp  FileViewerComponent.cpp  LAF.cpp  MainComponent.cpp  MainWindow.cpp  MultiFileViewerComponent.cpp  SpectrogramComponent.cpp  TabCloseButton.cpp
helper_apps/file_viewer/src/spectrogram/: SpectrogramComponent.cpp  SpectrogramSettings.cpp  SpectrogramSettingsComponent.cpp  SpectrogramSettingsWindow.cpp
inc/meta/: standard_defs.h
inc/meta/audio/: Asymp.h  BufferAccumulator.h  BufferBuffer.h  BufferHelpers.h  LoopingAccumulator.h  OverlapAndAdd.h  SingletonSampleRate.h  SmoothedSAH.h  decibels.h
inc/meta/dsp/: BandlimitedOsc.h  BandlimitedWavetable.h  DSPPrimitives.h  Decimate.h  FFTProcessor.h  FindInSignal.h  FixedPointBiquad.cpp  FixedPointBiquad.h  FixedPointRandom.h  ImpulseCalculation.h  LinearResample.h  MagPhaseCalculator.h  MultiChanConvolve.h  OnePoleLowPassFilter.h  OversampledBuffer.cpp  OversampledBuffer.h  PinkRandom.h  SincTable.h  WavetableOscillator.h  WavetableReader.h
inc/meta/generators/: Golay.h  LinearRamp.h  SineSweep.h  complementary_sequence.h  range_sequence.h
inc/meta/gooey/: BlurImageFilter.h  ButtonGrid.h  ChangeBroadcastingProperty.h  ComponentGrid.h  ConstexprColour.h  FileListComponent.h  Filmstrip.h  GradientDesigner.h  MaskingComponent.h  MetaLookAndFeel.h  MidiComponent.h  MidiPad.h  PerspectiveImageEffectFilter.h  RadioButton.h  RadioGrid.h  RulerComponent.h  Selectable.h  SpectrogramComponent.h  WaveformComponent.h
inc/meta/midi/: MidiLearnable.h  MidiState.h
inc/meta/testing/: TestHelpers.h  TestingJUCEContextHandler.h
inc/meta/util/: BitMask.h  BitSize.h  Countdown.h  FixedPoint.h  NumericConstants.h  StringHelpers.h  WordSize.h  constexpr_math.h  math.h  random.h  range.h  simd_ops.h  vectorized_math.h
inc/meta/util/container_helpers/: TwoDimensionalHeap.h  array.h  comparisons.h  memory.h  vector.h  zip.h
inc/meta/util/container_helpers/allocators/: non_copyable.h
inc/meta/util/enum/: Orientation.h
inc/meta/util/file/: AudioFileHelpers.h  Exceptions.h
inc/meta/util/fixed_point/: Math.h  Value.h
inc/meta/util/testing/: TestBase.h  TestHelpers.h  TestingComponentViewer.h  TestingJUCEMessageThreadHandler.h
inc/meta/vst/: ParameterListenerComponent.cpp  TimedParameterListener.h
src/audio/: Asymp.cpp  Blip_Buffer.cpp  SmoothedSAH.cpp
src/gooey/: BlurImageFilter.cpp  FileListComponent.cpp  Filmstrip.cpp  GradientDesigner.cpp  MetaLookAndFeel.cpp  MidiComponent.cpp  MidiPad.cpp  PerspectiveImageEffectFilter.cpp  RulerComponent.cpp  SpectrogramComponent.cpp  WaveformComponent.cpp
src/midi/: MidiLearnable.cpp  MidiState.cpp
src/testing/: TestBase.cpp  TestHelpers.cpp  TestingComponentViewer.cpp  TestingJUCEContextHandler.cpp
src/util/: StringHelpers.cpp
src/util/file/: AudioFileHelpers.cpp
src/util/testing/: TestBase.cpp  TestHelpers.cpp  TestingComponentViewer.cpp  TestingJUCEMessageThreadHandler.cpp
src/vst/: TimedParameterListener.h.cpp
test/: AllTests.cpp  CMakeLists.txt
test/tests/audio/: test_Asymp.h  test_BufferAccumulator.h  test_BufferBuffer.h  test_OverlapAndAdd.h  test_decibels.h
test/tests/dsp/: test_BlipSynth.h  test_Decimate.h  test_FFTProcessor.h  test_FindInSignal.h  test_LinearResample.h  test_MagPhaseCalculator.h  test_MultiChanConvolve.h  test_OversampledBuffer.h  test_SharedMemoryBlock.h  test_Wavetable.h  test_WavetableOscillator.h  test_xcorr.h
test/tests/generators/: test_Golay.h  test_LinearRamp.h  test_LoopingAccumulator.h  test_SineSweep.h  test_complementary_sequence.h  test_range_sequence.h
test/tests/util/: test_BitMask.h  test_BitSize.h  test_Countdown.h  test_FixedPoint.h  test_FixedPointMath.h  test_Interpolate.h  test_StringHelpers.h  test_graphing_plot.h  test_math.h  test_range.h  test_simd_ops.h  test_vector_math.h
test/tests/util/container_helpers/: test_Array.h  test_TwoDimensionalHeap.h  test_Vector.h  test_comparisons.h  test_zip.h
